Fixxed spacing

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -2,24 +2,29 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .button {
-  color: #666666;
-  background-color: #eeeeee;
+  color: purple;
+  background-color: lightblue;
   border-color: #eeeeee;
   font-weight: bolder;
-  font-size: 40px;
+  font-size: 100px;
   font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  //font-family: "Caflisch Script Pro", cursive;
   text-decoration: none;
   text-align: center;
-  line-height: 40px;
-  height: 100px;
-  width: 100px;
+  line-height: 0px;
+  height: 150px;
+  width: 150px;
   padding: 0 40px;
   margin-left: 0;
+  margin-bottom: 0;
+  margin-top: 0;
   display: inline-block;
   appearance: none;
+  border-radius: 10px;
   cursor: pointer;
   
-  border-color: red;
+ 
+  //border-radius: 20px;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
@@ -31,14 +36,24 @@
 
   .h1 {
       color: #666666;
-      margin-left: 80px;      
+      margin-left: 100px;      
   }
 
   .div-mar-left{
-      margin-left: 150px;
+      margin-left: 550px;
   }
 
-  .div-mar-bottom{
+  .div-mar-adj{
       margin-bottom: 0px;
+      margin-top: 0px;
+      padding: 0px;
   }
+
+  .div-btn{
+      margin-top: 40px;
+      margin-left: 90px; 
+  }
+
+  
+
 
